added error model
